--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@
     <h2 class="header"><a href="index.html"><i class="fa fa-caret-left" style="font-size:24px"></i></a> Events</h2>
 
     <input
-      type="text"
+    type="text"
       id="myInput"
       onkeyup="myFunction()"
       placeholder="Search for names.."
@@ -21,89 +21,95 @@
     <ul id="myUL">
       <li>
         <div class="event">
+          <img src="./images/arm-wrestling.jpg" alt="" />
+          <a href="Arm Wrestling.html">Arm Wrestling</a>
+        </div>
+      </li>
+      <li>
+        <div class="event">
           <img src="./images/div1.jpg" alt="Hackathon" />
           <a href="Hackathon.html">Hackathon</a>
-        </li>
-
-
         </div>
+        </li>
+        
       <li>
         <div class="event">
           <img src="./images/startup.jpg" alt="Startup" srcset="" />
-          <a href="startUp.html"
-          >Start UP</a
-          >
-
+          <a href="startUp.html">
+            Start UP
+          </a>
         </div>
       </li>
 
       <li>
         <div class="event">
           <img src="./images/chess.jpg" alt="" srcset="" />
-          <a href="Chess.html">Chess</a>
-        </li>
-        <li>
-
-        </div>
-        <div class="event">
-          <img src="./images/quiz.jpg" alt="" />
-          <a href="Quiz.html">Quiz</a>
-        </li>
-        <li>
-
-        </div>
-        <div class="event">
-          <img src="./images/photography.jpeg" alt="" />
-          <a href="Photography.html"
-          >Photography</a
-          >
-
+          <a href="Chess.html">
+            Chess
+          </a>
         </div>
       </li>
+
+      <li>
+        <div class="event">
+          <img src="./images/quiz.jpg" alt="" />
+          <a href="Quiz.html">
+            Quiz
+          </a>
+        </div>
+      </li>
+
+      <li>
+        <div class="event">
+          <img src="./images/photography.jpeg" alt="" />
+          <a href="Photography.html">
+          Photography
+          </a>
+        </div>
+      </li>
+
       <li>
         <div class="event">
           <img src="./images/puzzle.jpeg" alt="" />
-          <a href="Puzzle.html">Puzzle</a>
-        </li>
-        <li>
-
-        </div>
-        <div class="event">
-          <img src="./images/Debate.jpg" alt="" />
-          <a href="Debate_competition.html"
-          >Debate competition</a
-          >
-
+          <a href="Puzzle.html">
+            Puzzle
+          </a>
         </div>
       </li>
+
+      <li>
+        <div class="event">
+          <img src="./images/Debate.jpg" alt="" />
+          <a href="Debate_competition.html">
+            Debate competition
+          </a>
+        </div>
+      </li>
+
       <li>
         <div class="event">
           <img src="./images/flag.jpg" alt="flag" srcset="" />
-          <a href="Independence_Day.html"
-          >Independence
-          Day</a
-          >
-
+          <a href="Independence_Day.html">
+            Independence Day
+          </a>
         </div>
       </li>
 
       <li>
         <div class="event">
           <img src="./images/rubiks.jpg" alt="" />
-          <a href="Rubik's_Cube.html">Rubik's Cube</a>
-        </li>
-        <li>
-
-        </div>
-        <div class="event">
-          <img src="./images/sudoku.jpg" alt="" />
-          <a href="Sudoku_puzzles.html">Sudoku puzzles</a>
+          <a href="Rubik's_Cube.html">
+            Rubik's Cube
+          </a>
         </div>
       </li>
+
       <li>
         <div class="event">
-          <img src="./images/arm-wrestling.jpg" alt="" />
-          <a href="Arm Wrestling.html">Arm Wrestling</a>
+          <img src="./images/sudoku.jpg" alt="" />
+          <a href="Sudoku_puzzles.html">
+            Sudoku puzzles
+          </a>
         </div>
       </li>
     </ul>
