added_dynamic_event_page

--- a/Admin.html
+++ b/Admin.html
@@ -31,7 +31,7 @@
         <button type="submit" class="login" onclick="login()">Login</button>
       </form>
       <div class="sign-txt">
-        Not yet member? <a href="sign_up.html">Signup now</a>
+        Not yet member? <a href="Signup.html">Signup now</a>
       </div>
     </div>
 
